--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,2 @@
 <h1>Sign Up</h1>
-<%= form_for @user do |f| %>
-  <div>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
-  </div>
-  <div>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div>
-    <%= f.submit %>
-  </div>
-<% end %>
+<%= render partial: "shared/user_form", locals: {button_text: "Sign Up"} %>
