--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,26 @@
-<%= link_to "signup", new_user_path %>
-<%= link_to "signin", new_session_path %>
+
+<% if session[:id] %>
+  <%= link_to "create post", new_post_path %>
+  <%= link_to "logout", session_path, method="destroy"
+<% else %>
+  <%= link_to "signup", new_user_path %>
+  <%= link_to "signin", new_session_path %>
+<% end %>
+
+
+
+
+<table>
+  <% @posts.each_with_index do |post, index| %>
+    <tr>
+      <td><%= index + 1 %>. </td>
+      <td>
+      <% if post.url.length > 0 %>
+        <%= link_to post.title, "http://#{post.url}" %>
+      <% else %>
+        <%= link_to post.title, post %>
+      <% end %>
+      (<%= post.url %>)</td>
+    </tr>
+  <% end %>
+</table>
