--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
-<%= @post.title %>
+<div><%= @post.title %>
 <%= @post.body %>
 <%= link_to "Edit", edit_post_path %>
 <%= link_to "Delete", post_path, method: :delete, data: {confirm: "Are you sure"} %>
+</div>
+
